--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,6 @@
 body{
 	background-color: black;
+	text-align: center;
 }
 
 h1, h2, p, figure{
@@ -10,6 +11,23 @@ h1, h2, p, figure{
 h1{
 	font-weight: normal;
 	font-size: 50px;
-	text-align: center;
 }
 
+h2{
+	font-weight: 300;
+	font-size: 42px;
+}
+
+figure{
+	font-size: 21px;
+	color: gray;
+}
+
+a{
+	color: brightblue;
+}
+
+#copyright{
+	text-align: right;
+	color: gray;
+}
